
ChangeLog:
----------

0.6.00
	* Use g_get_user_config_dir to get where to put the config file
	* Make code GTK3 compatible
	* Remove Cmake stuff and use a basic Makefile instead
	* Update makefile to use GTK3 by default (add GTK2=1 to make command to use 
	  GTK2 during compilation)
	
0.5.11
	* Added icons for lua and java files
	* Fix minor warning (-Wformat-security)

0.5.10
	* Removed a debug printf
	* Fixed warnings caused by new version of gcc
	* Added missing clicked_node.h to project file
	* Removed making a busy cursor in the search code, one was already
	  created in the graphics codes
	* Fixed homepage in the about dialog
	* Some minor code cleanups
	* Fix minus-sign in the man page

0.5.01
	* Fix a cppcheck warning (writing to non-initialized char pointer)
	* Man-page updates

0.5.00
	* Added a search dialog
	* Fixed problems with the prefs system
	* Documentation updates

0.4.10
	* Added a "Recently opened files" box
	* Updated in-source commenting
	* Updated documentation
	* Split up the GUI code into several files
	* Redesigned the About-dialog
	* Removed the TODO file - it kept getting invalid

0.4.01
	* Made the rename functionality rename in the treeview, instead of using
	  another dialog

0.4.00
	* Implemented Treeview quick search
	* Updated desktop comment wording
	* Mem leaks fixed
	* Code cleanups
	* Split the clipboard stuff to files of their own
	* Fixed a problem with the --generate option
	
0.3.22
	* Fixed slash problems
	* Spelling fixes

0.3.21
	* Fixed double slash in generated project files
	* Minor updates to documentation
	* Rephrased warnings
	* Debug updates
	
0.3.20
	* Better checks for return values of changedirs

0.3.19
	* Fixed exit codes
	* Fixed cppcheck reports
	* Many minor fixes (unused variables removed and stuff like that)

0.3.18
	* Added and implemented --generate option
	* Fixed minor memory leaks
	
0.3.17
	* Added menu item to copy filename+full path to clipboard
	* man-page updates
	* Documentation updates
